--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,8 +8,11 @@ on:
 
 jobs:
   build:
-    name: Build
+    name: Build & Verify
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        language: [ 'csharp' ]
 
     steps:
     - uses: actions/checkout@v2
@@ -23,15 +26,6 @@ jobs:
       run: dotnet build ./src --no-restore
     - name: Test
       run: dotnet test ./src --no-build --verbosity normal
-
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'csharp' ]
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
