--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,11 +8,8 @@ on:
 
 jobs:
   build:
-    name: Build & Verify
+    name: Build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        language: [ 'csharp' ]
 
     steps:
     - uses: actions/checkout@v2
@@ -27,6 +24,16 @@ jobs:
     - name: Test
       run: dotnet test ./src --no-build --verbosity normal
 
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'csharp' ]
+
+    steps:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       with:
