--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet restore ./src
 
     - name: Publish
-      run: dotnet publish ./out
+      run: dotnet publish ./src --output ./package
 
     - uses: azure/login@v1
       with:
@@ -34,3 +34,9 @@ jobs:
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./infra/template.json
         parameters: ./infra/parameters.json
+
+    - name: Deploy
+      uses: Azure/functions-action@v1.1.8
+      with:
+        app-name: scaled-activities-eus2
+        package: ./package
