--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,13 @@
 name: Test
 
 on:
-  push:
-    branches: [  ]
   pull_request:
-    branches: [ main ]
+    branches: 
+    - main
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
