--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,31 @@
+name: Deploy
+
 on:
   push:
-    branches: [ main ]
-name: Azure ARM
+    branches:
+    - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-
-      # Checkout code
     - uses: actions/checkout@main
 
-      # Log into Azure
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.301
+
+    - name: Restore dependencies
+      run: dotnet restore ./src
+
+    - name: Publish
+      run: dotnet publish ./src --output ./package
+
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Deploy ARM template
     - name: Run ARM deploy
       uses: azure/arm-deploy@v1
       with:
@@ -24,5 +34,8 @@ jobs:
         template: ./infra/template.json
         parameters: ./infra/parameters.json
 
-      # output containerName variable from template
-    - run: echo ${{ steps.deploy.outputs.containerName }}
+    - name: Deploy
+      uses: Azure/functions-action@v1.1.8
+      with:
+        app-name: scaled-activities-eus2
+        package: ./package
