--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./infra/template.json
-        parameters: ./infra/parameters.json
+        parameters: ./infra/parameters-test.json
 
     - name: Deploy
       uses: Azure/functions-action@v1.1.8
