--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Run ARM deploy
+      id: infra
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
@@ -37,5 +38,5 @@ jobs:
     - name: Deploy
       uses: Azure/functions-action@v1.1.8
       with:
-        app-name: scaled-activities-eus2
+        app-name: ${{ steps.infra.outputs.functionName }}
         package: ./package
