--- a/src/JohanBos.ScaledActivities.csproj
+++ b/src/JohanBos.ScaledActivities.csproj
@@ -27,7 +27,7 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="appSettings.json">
+    <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="appSettings.development.json">
