--- a/src/JohanBos.ScaledActivitied.Function/appSettings.development.json
+++ b/src/JohanBos.ScaledActivitied.Function/appSettings.development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Storage": ""
+    "Storage": "UseDevelopmentStorage=true;"
   },
   "QueueName": "activities-queued-dev"
 }
