--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,10 @@ jobs:
         dotnet-version: 3.1.301
 
     - name: Restore dependencies
-      run: dotnet restore ./src
+      run: dotnet restore .
 
     - name: Publish
-      run: dotnet publish ./src --output ./package
+      run: dotnet publish ./src/JohanBos.ScaledActivitied.Function/JohanBos.ScaledActivities.Function.csproj --output ./package
 
     - uses: azure/login@v1
       with:
