--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,8 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Restore dependencies
-      run: dotnet restore ./src
+      run: dotnet restore .
     - name: Build
-      run: dotnet build ./src --no-restore
+      run: dotnet build . --no-restore
     - name: Test
-      run: dotnet test ./src --no-build --verbosity normal
+      run: dotnet test . --no-build --verbosity normal
