--- a/src/JohanBos.ScaledActivitied.Function/JohanBos.ScaledActivities.Function.csproj
+++ b/src/JohanBos.ScaledActivitied.Function/JohanBos.ScaledActivities.Function.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.17.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.12" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.8.55" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
