--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,22 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Run ARM deploy
-      id: infra
+    - name: Deploy ARM template
+      id: infra1
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./infra/template.json
+        parameters: ./infra/parameters-test.json
+
+    - name: Deploy ARM template dashboard
+      id: infra2
+      uses: azure/arm-deploy@v1
+      with:
+        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+        resourceGroupName: ${{ secrets.AZURE_RG }}
+        template: ./infra/template-dashboard.json
         parameters: ./infra/parameters-test.json
 
     - name: Deploy
