--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./infra/template-dashboard.json
-        parameters: ./infra/parameters-test.json
+        parameters: ./infra/parameters-test-dashboard.json
 
     - name: Deploy
       uses: Azure/functions-action@v1.3.1
